--- a/app/src/main/res/layout/activity_add_schedule_information.xml
+++ b/app/src/main/res/layout/activity_add_schedule_information.xml
@@ -126,6 +126,7 @@
             android:layout_marginStart="108dp"
             android:layout_marginEnd="80dp"
             android:layout_marginBottom="52dp"
+            android:onClick="buttoSaveSchedule"
             android:text="Сохранить расписние"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
