--- a/app/src/main/res/layout/activity_admin_add_subject.xml
+++ b/app/src/main/res/layout/activity_admin_add_subject.xml
@@ -113,6 +113,7 @@
         android:layout_marginStart="102dp"
         android:layout_marginEnd="103dp"
         android:layout_marginBottom="93dp"
+        android:onClick="buttonSaveSubject"
         android:text="Сохранить предмет"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
