--- a/app/src/main/res/layout/activity_add_schedule_information.xml
+++ b/app/src/main/res/layout/activity_add_schedule_information.xml
@@ -8,8 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
-        android:layout_width="394dp"
-        android:layout_height="602dp"
+        android:layout_width="413dp"
+        android:layout_height="613dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="26dp"
             android:layout_marginBottom="58dp"
             android:text="День недели"
@@ -126,7 +126,7 @@
             android:layout_marginStart="108dp"
             android:layout_marginEnd="80dp"
             android:layout_marginBottom="52dp"
-            android:onClick="buttoSaveSchedule"
+            android:onClick="buttonSaveSchedule"
             android:text="Сохранить расписние"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -158,10 +158,12 @@
         android:layout_width="432dp"
         android:layout_height="65dp"
         android:layout_marginTop="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:context=".admin.AddScheduleInformationActivity">
 
         <TextView
