--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -46,7 +46,7 @@
         android:layout_marginBottom="101dp"
         android:onClick="addSchedule"
         android:text="Добавить расписание"
-        app:layout_constraintBottom_toTopOf="@+id/addTeacher"
+        app:layout_constraintBottom_toTopOf="@+id/changeScheduleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addSubject" />
@@ -61,25 +61,24 @@
         android:layout_marginBottom="67dp"
         android:onClick="addSubject"
         android:text="Добавить предмет"
-        app:layout_constraintBottom_toTopOf="@+id/addTeacher"
+        app:layout_constraintBottom_toTopOf="@+id/changeScheduleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAdminFIO" />
 
     <Button
-        android:id="@+id/addTeacher"
+        android:id="@+id/changeScheduleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
         android:layout_marginTop="54dp"
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="283dp"
-        android:onClick="addTeacher"
-        android:text="Добавить преподавателя(Может даже не нужен)"
+        android:onClick="changeSchedule"
+        android:text="Изменить расписание"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addSchedule" />
 </androidx.constraintlayout.widget.ConstraintLayout>
